Less todos, some cleanup